# Agentic_AI

./: README.md  chat_logs.json  pyproject.toml
agentic_ai/data/: employee.db
agentic_ai/data/chroma_db/: chroma.sqlite3
agentic_ai/src/: data_base.py  decision_making_agent_prompt.py  driver.py  prompt.py  promt.ipynb  revoke.ipynb  vector.py
agentic_ai/src/agentic_ai/data/chroma_db/: chroma.sqlite3
