[project]
name = "agentic-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (>=0.3.19,<0.4.0)",
    "langchain-community (>=0.3.18,<0.4.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "langchain-huggingface (>=0.1.2,<0.2.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "accelerate (>=1.4.0,<2.0.0)",
    "chromadb (>=0.6.3,<0.7.0)",
    "gradio (>=5.18.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
